<resources>
    <string name="app_name">Construction Management Application</string>
    <string name="action_settings">Settings</string>
    <string name="strAddSite">Add New Site</string>
    <string name="strViewSites">View Sites</string>
    <string name="strWelcome">Welcome to the Construction Management Application ;)</string>
    <string name="title_activity_activity_add_site">Add New Site</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_view_sites">Sites</string>
    <string name="title_activity_activity_test_sites">Test Sites</string>
    <string name="strTestSites">Test Sites</string>
    <string name="title_activity_activity_staff_list">Staff</string>
    <string name="title_activity_activity_contractor_list">Contractors</string>
    <string name="strAddStaff">Add New Staff</string>
    <string name="strViewStaff">View Staff</string>
    <string name="strAddContractor">Add New Subcontractor</string>
    <string name="strViewContractors">View Subcontractors</string>
    <string name="title_activity_activity__add__staff">Add New Staff</string>
    <string name="title_activity_activity_add_contractor">Add New Contractor</string>
    <string name="title_activity_activity_add_staff2">Add New Staff Member</string>

</resources>
