<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="false"
        android:weightSum="1">

        <TextView
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Welcome..."
            android:id="@+id/textView12" />

        <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/strAddSite"
           android:id="@+id/btnAddSite"
           android:layout_alignParentStart="true"
           android:layout_below="@+id/btnViewSites"
           android:layout_alignParentLeft="true"
           android:layout_alignEnd="@+id/btnViewSites" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strViewSites"
            android:id="@+id/btnViewSites"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:onClick="viewSitesActivity"
            android:layout_below="@+id/btnAddStaff"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strAddStaff"
            android:id="@+id/btnAddStaff"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnAddContractor"
            android:layout_alignParentLeft="true"
            android:layout_alignEnd="@+id/btnViewSites" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strViewStaff"
            android:id="@+id/btnViewStaff"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnAddSite"
            android:layout_alignParentLeft="true"
            android:layout_alignEnd="@+id/txtWelcome" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strAddContractor"
            android:id="@+id/btnAddContractor"
            android:layout_below="@+id/txtWelcome"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/txtWelcome" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strViewContractors"
            android:id="@+id/btnViewContractors"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnViewStaff"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true" />

    </LinearLayout>


</RelativeLayout>
